Fixing whitespace

--- a/app/reports/deansOffice/directives/yearTable/yearTable.css
+++ b/app/reports/deansOffice/directives/yearTable/yearTable.css
@@ -8,6 +8,7 @@
   padding-bottom: 15px;
   border-bottom: 1px solid #ddd;
   text-align: right;
+  height: 45px;
 }
 
 .dean-report__header-cell--right {
